[package]
name = "rust-inference-yolov8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cv-convert = "0.25.0"
encoding_rs = "0.8.33"
image = "0.24.7"
ndarray = "0.15.6"
opencv = "0.86.1"
ort = "1.16.2"

